--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -1026,7 +1026,7 @@ input, button, select, optgroup, textarea {
 }
 .z-portal-container .z-main .z-portal-page .z-list-content {
   padding: 3.375rem 13.75rem 0 13.75rem;
-  height: 647px;
+  height: 40.438rem;
 }
 .z-portal-container .z-main .z-portal-page .z-list-table {
   position: relative;
@@ -1056,13 +1056,13 @@ input, button, select, optgroup, textarea {
   height: 2.8125rem;
 }
 .z-portal-container .z-main .z-portal-page .z-list-body tr:hover {
-  background-color: #EBEBEB;
+  background-color: #EEEEEE;
 }
 .z-portal-container .z-main .z-portal-page .z-list-body tr.active {
-  background-color: rgba(230, 232, 235, 0.6);
+  background-color: #E3F5FC;
 }
 .z-portal-container .z-main .z-portal-page .z-list-body tr.active td {
-  color: #0060A5;
+  color: #1959AC;
 }
 .z-portal-container .z-main .z-portal-page .z-list-body tr td {
   font-size: 0.875rem;
@@ -1075,10 +1075,10 @@ input, button, select, optgroup, textarea {
   padding-left: 1.25rem;
 }
 .z-portal-container .z-main .z-portal-page .z-list-body tr td a {
-  color: #586872;
+  color: #222529;
 }
 .z-portal-container .z-main .z-portal-page .z-list-body .no-data-found-list {
-  background-color: #EBEBEB;
+  background-color: #FFFFFF;
   pointer-events: none;
 }
 .z-portal-container .z-main .z-portal-page .z-faq-content {
@@ -1091,7 +1091,7 @@ input, button, select, optgroup, textarea {
   border-radius: 0.0625rem;
   -webkit-border-radius: 0.0625rem;
   -moz-border-radius: 0.0625rem;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 .z-portal-container .z-main .z-portal-page .z-faq-content .z-faq-group-title {
   height: 3.438rem;
@@ -1138,13 +1138,13 @@ input, button, select, optgroup, textarea {
   background-color: #E3F5FC;
 }
 .z-portal-container .z-main .z-portal-page .z-faq-content .z-faq-row {
-  padding: 20px 30px 0px 30px;
+  padding: 1.25rem 1.875rem 0 1.875rem;
 }
 .z-portal-container .z-main .z-portal-page .z-faq-content .z-faq-row:first-of-type {
-  padding-top: 35px;
+  padding-top: 2.188rem;
 }
 .z-portal-container .z-main .z-portal-page .z-faq-content .z-faq-row:last-of-type {
-  padding-bottom: 35px;
+  padding-bottom: 2.188rem;
 }
 .z-portal-container .z-main .z-portal-page .z-faq-content .z-faq-row-title {
   font-size: 1rem;
@@ -1157,8 +1157,7 @@ input, button, select, optgroup, textarea {
   background-color: #339AF0;
 }
 .z-portal-container .z-main .z-portal-page .z-faq-content .z-faq-row-content {
-  margin-top: 20px;
-  margin-left: 17px;
+  margin: 1.25rem 1.063rem 0 0;
   font-size: 1rem;
   font-weight: 400;
   color: #222529;
@@ -1215,10 +1214,10 @@ input, button, select, optgroup, textarea {
   padding: 1.875rem 0;
 }
 .portal-container .main-search.slide-up + .portal-search-result .list {
-  height: calc(8.75rem + 647px);
+  height: calc(8.75rem + 40.438rem);
 }
 .portal-container .main-search.slide-down + .portal-search-result .list {
-  height: 647px;
+  height: 40.438rem;
 }
 .portal-container .main-content .card-group {
   padding: 3.4375rem 13.75rem 0 13.75rem;
@@ -1254,7 +1253,7 @@ input, button, select, optgroup, textarea {
   color: #63686C;
 }
 .portal-container .main-content .list {
-  height: 647px;
+  height: 40.438rem;
   padding: 2.625rem 22.5rem 0 22.5rem;
 }
 .portal-container .main-content .list .row {
