--- a/src/main/resources/public/scss/portal/_variables.scss
+++ b/src/main/resources/public/scss/portal/_variables.scss
@@ -39,7 +39,7 @@ $main-search-height:                         6.25rem; // 100px
 $main-search-bg-color:                       $neutral50;
 
 // content
-$content-list-height:                        647px; // 647px
+$content-list-height:                        40.438rem; // 647px
 
 // card
 $card-list-font-color:                       $gray600;
@@ -61,7 +61,7 @@ $layout-list-height:                         35.44rem; // 567px
 $notice-pinned-color:                        $blue100;
 
 // view
-$view-title-font-size:                       1.125rem; // 18px
+$view-title-font-size:                       $font-size-m; // 18px
 $view-title-font-weight:                     $font-weight-medium;
 $view-title-font-color:                      $gray800;
 
@@ -74,7 +74,7 @@ $view-content-font-weight:                   $font-weight-regular;
 $view-content-font-color:                    $gray800;
 //////////////////////////// faq ////////////////////////////
 // faq > faq group
-$faq-group-font-size:                        1.125rem; // 18px
+$faq-group-font-size:                        $font-size-m; // 18px
 $faq-group-font-weight:                      $font-weight-medium;
 $faq-group-font-color:                       $gray600;
 $faq-group-border-width:                     0.0625rem; // 1px
@@ -85,21 +85,21 @@ $faq-group-opened-border-color:              $blue500;
 $faq-group-opened-font-color:                $blue500;
 $faq-group-opened-icon-color:                $blue500;
 // faq > faq group > faq row
-$faq-row-font-size:                          1rem; // 16px
+$faq-row-font-size:                          $font-size-s; // 16px
 $faq-row-font-weight:                        $font-weight-medium;
 $faq-row-font-color:                         $gray600;
 $faq-row-opened-bg-color:                    $blue100;
 $faq-row-border-color:                       $gray300;
 $faq-row-opened-border-color:                $blue500;
 // faq > faq group > faq row content
-$faq-row-content-font-size:                  1rem; // 16px
+$faq-row-content-font-size:                  $font-size-s; // 16px
 $faq-row-content-font-weight:                $font-weight-regular;
 $faq-row-content-font-color:                 $gray800;
 
 //////////////////////////// element /////////////////////////////////
 $table-body-height:                          32.81rem; // 525px
 $table-th-font-color:                        $gray600;
-$table-td-font-size:                         1rem; // 16px
+$table-td-font-size:                         $font-size-s; // 16px
 $table-td-font-weight:                       $font-weight-regular;
 $table-td-font-color:                        $gray800;
 $table-row-hover-bg-color:                   $neutral200;
@@ -119,10 +119,12 @@ $login-logo-position-top:                    5rem; // 80px
 $login-logo-position-left:                   5rem; // 80px
 
 $login-form-width:                           38.13rem; // 610px
-$login-form-font-size:                       1rem; // 16px
+$login-form-font-size:                       $font-size-s; // 16px
 $login-form-font-weight:                     $font-weight-regular;
 $login-form-font-color:                      $gray800;
 $login-form-border-color:                    $gray300;
+
+$login-divide-font-color:                    $gray400;
 
 ////////////////////////// 회원 가입  //////////////////////////
 $signup-bg-color:                            $blue500;
@@ -158,20 +160,20 @@ $modal-bottom-height:                        3.5rem; //56px
 
 ////////////////////////////// 리스트 //////////////////////////////
 // 리스트 - 마우스 오버시
-$list-hover-bg-color:                         map-get($grays, 'line');
+$list-hover-bg-color:                         $neutral200;
 
 // 리스트 - 데이터 없을때
-$no-data-found-list-bg:                       map-get($grays, 'line');
+$no-data-found-list-bg:                       $white;
 
 // 리스트 - 선택시
-$list-active-font-color:                      map-get($blues, 'dark');
-$list-active-bg-color:                        hexToRGBA(#e6e8eb, 0.6);
+$list-active-font-color:                      $blue700;
+$list-active-bg-color:                        $blue100;
 
 // 공지사항 상단 공지 (배경색 별도 처리)
 $notice-pinned-color:                         $blue100;
 
-// Document color icon
-$document-color-size:                         1rem; // 16px
-
 // 리스트 항목명
-$list-head-font-size:                         $gray800;
+$list-head-font-color:                        $gray800;
+$list-body-font-color:                        $gray800;
+$list-border-color:                           $gray300;
+
