--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -231,7 +231,7 @@
           th {
             font-size: $font-size-s;
             font-weight: $font-weight-medium;
-            color: $list-head-font-size;
+            color: $list-head-font-color;
             padding: 0 0.9375rem; // 0 15px
 
             &:first-child { padding-left: 1.25rem; } // 20px
@@ -256,13 +256,13 @@
           td {
             font-size: $font-size-xs;
             font-weight: $font-weight-regular;
-            color: $gray800;
+            color: $list-body-font-color;
             padding: 0 0.9375rem; // 0 15px
             line-height: initial; // 소문자 글자 짤림현상 방지
 
             &:first-child { padding-left: 1.25rem; } // 20px
 
-            a { color: map-get($grays, "dark"); }
+            a { color: $list-body-font-color; }
           }
         }
         // 데이터 없을때
