--- a/src/main/resources/public/scss/portal/_buttons.scss
+++ b/src/main/resources/public/scss/portal/_buttons.scss
@@ -1,6 +1,6 @@
 @import "../template/buttons";
 
-.#{$common-prefix}button {
+.z-button {
   // 구글 로그인 버튼
   // 카카오 로그인 버튼
   @each $theme, $value in $button-themes-social {
