--- a/src/main/resources/public/scss/template/_buttons.scss
+++ b/src/main/resources/public/scss/template/_buttons.scss
@@ -16,8 +16,8 @@
  */
 
 // <a class='z-button'></a>  or <button class='z-button'>
-.#{$common-prefix}button,
-.#{$common-prefix}button-icon {
+.z-button,
+.z-button-icon {
   display: inline-block;
   font-family: $button-font-family;
   font-size: $button-font-size;
@@ -55,7 +55,7 @@
         box-shadow: map-get($value, 'default', 'shadow');
       }
       // 아이콘이 존재한다면
-      .#{$common-prefix}icon {
+      .z-icon {
         display: inline-block;
         background: map-get($value, 'default', 'font');
         pointer-events: none;
@@ -68,7 +68,7 @@
         @if map-get($value, 'focus', 'shadow') != null {
           box-shadow: map-get($value, 'focus', 'shadow');
         }
-        .#{$common-prefix}icon {
+        .z-icon {
           background: map-get($value, 'focus', 'font');
         }
       }
@@ -80,7 +80,7 @@
         @if map-get($value, 'hover', 'shadow') != null {
           box-shadow: map-get($value, 'hover', 'shadow');
         }
-        .#{$common-prefix}icon {
+        .z-icon {
           background: map-get($value, 'hover', 'font');
         }
       }
@@ -93,7 +93,7 @@
         @if map-get($value, 'active', 'shadow') != null {
           box-shadow: map-get($value, 'active', 'shadow');
         }
-        .#{$common-prefix}icon {
+        .z-icon {
           background: map-get($value, 'active', 'font');
         }
       }
@@ -106,7 +106,7 @@
         @if map-get($value, 'disabled', 'shadow') != null {
           box-shadow: map-get($value, 'disabled', 'shadow');
         }
-        .#{$common-prefix}icon {
+        .z-icon {
           background: map-get($value, 'disabled', 'font');
         }
       }
@@ -123,7 +123,7 @@
         box-shadow: map-get($value, 'default', 'shadow');
       }
       // 아이콘이 존재한다면
-      .#{$common-prefix}icon {
+      .z-icon {
         display: inline-block;
         background: map-get($value, 'default', 'font');
         pointer-events: none;
@@ -136,7 +136,7 @@
         @if map-get($value, 'focus', 'shadow') != null {
           box-shadow: map-get($value, 'focus', 'shadow');
         }
-        .#{$common-prefix}icon {
+        .z-icon {
           background: map-get($value, 'focus', 'font');
         }
       }
@@ -148,7 +148,7 @@
         @if map-get($value, 'hover', 'shadow') != null {
           box-shadow: map-get($value, 'hover', 'shadow');
         }
-        .#{$common-prefix}icon {
+        .z-icon {
           background: map-get($value, 'hover', 'font');
         }
       }
@@ -161,7 +161,7 @@
         @if map-get($value, 'active', 'shadow') != null {
           box-shadow: map-get($value, 'active', 'shadow');
         }
-        .#{$common-prefix}icon {
+        .z-icon {
           background: map-get($value, 'active', 'font');
         }
       }
@@ -174,7 +174,7 @@
         @if map-get($value, 'disabled', 'shadow') != null {
           box-shadow: map-get($value, 'disabled', 'shadow');
         }
-        .#{$common-prefix}icon {
+        .z-icon {
           background: map-get($value, 'disabled', 'font');
         }
       }
@@ -182,18 +182,18 @@
   }
 }
 
-.#{$common-prefix}button-icon {
+.z-button-icon {
   padding: 0.25rem 0.3125rem; // 4px 5px (버튼 기본 너비 높이 : 36px 36px)
 }
 
 // 버튼 목록
-.#{$common-prefix}button-list {
+.z-button-list {
   display: inline-flex;
   vertical-align: middle;
   position: relative;
 
-  .#{$common-prefix}button,
-  .#{$common-prefix}button-icon {
+  .z-button,
+  .z-button-icon {
     &:not(:last-child) {
       margin-right: 0.5rem; // 8px
     }
@@ -203,14 +203,14 @@
 // button group
 // (1) button switch group : 버튼 그룹 중 하나의 버튼만 선택
 // (2) button toggle group : 버튼 그룹 각 버튼 토글 가능
-.#{$common-prefix}button-switch-group,
-.#{$common-prefix}button-toggle-group {
+.z-button-switch-group,
+.z-button-toggle-group {
   display: inline-flex;
   flex-direction: row;
   vertical-align: middle;
 
-  .#{$common-prefix}button-switch,
-  .#{$common-prefix}button-toggle {
+  .z-button-switch,
+  .z-button-toggle {
     flex: 1 1 auto;
     display: inline-block;
     font-family: $button-font-family;
@@ -235,7 +235,7 @@
     padding: 0.25rem 0.6875rem; // 4px 11px
 
     // 아이콘이 존재한다면
-    .#{$common-prefix}icon {
+    .z-icon {
       display: inline-block;
       background: map-get($button-group, 'default', 'font');
       pointer-events: none;
@@ -249,7 +249,7 @@
       @if map-get($button-group, 'focus', 'shadow') != null {
         box-shadow: map-get($button-group, 'focus', 'shadow');
       }
-      .#{$common-prefix}icon {
+      .z-icon {
         background: map-get($button-group, 'focus', 'font');
       }
     }
@@ -262,7 +262,7 @@
       @if map-get($button-group, 'hover', 'shadow') != null {
         box-shadow: map-get($button-group, 'hover', 'shadow');
       }
-      .#{$common-prefix}icon {
+      .z-icon {
         background: map-get($button-group, 'hover', 'font');
       }
     }
@@ -276,7 +276,7 @@
       @if map-get($button-group, 'active', 'shadow') != null {
         box-shadow: map-get($button-group, 'active', 'shadow');
       }
-      .#{$common-prefix}icon {
+      .z-icon {
         background: map-get($button-group, 'active', 'font');
       }
     }
@@ -290,7 +290,7 @@
       @if map-get($button-group, 'selected', 'shadow') != null {
         box-shadow: map-get($button-group, 'selected', 'shadow');
       }
-      .#{$common-prefix}icon {
+      .z-icon {
         background: map-get($button-group, 'selected', 'font');
       }
     }
@@ -304,22 +304,22 @@
       @if map-get($button-group, 'disabled', 'shadow') != null {
         box-shadow: map-get($button-group, 'disabled', 'shadow');
       }
-      .#{$common-prefix}icon {
+      .z-icon {
         background: map-get($button-group, 'disabled', 'font');
       }
     }
   }
 
   // 양 끝 테두리 둥글게
-  .#{$common-prefix}button-switch:not(:first-child),
-  .#{$common-prefix}button-toggle:not(:first-child) {
+  .z-button-switch:not(:first-child),
+  .z-button-toggle:not(:first-child) {
     margin-left: -$button-border-width;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
 
-  .#{$common-prefix}button-switch:not(:last-of-type),
-  .#{$common-prefix}button-toggle:not(:last-of-type) {
+  .z-button-switch:not(:last-of-type),
+  .z-button-toggle:not(:last-of-type) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
@@ -330,21 +330,21 @@
     align-items: flex-start;
     justify-content: center;
 
-    .#{$common-prefix}button-switch,
-    .#{$common-prefix}button-toggle {
+    .z-button-switch,
+    .z-button-toggle {
       flex: 0 1 auto;
       @include borderRadius($button-border-radius); // 1px
     }
     // Prevent double borders when buttons are next to each other
-    .#{$common-prefix}button-switch:not(:first-child),
-    .#{$common-prefix}button-toggle:not(:first-child) {
+    .z-button-switch:not(:first-child),
+    .z-button-toggle:not(:first-child) {
       margin-left: 0;
       margin-top: -$button-border-width;
       border-top-left-radius: 0;
       border-top-right-radius: 0;
     }
-    .#{$common-prefix}button-switch:not(:last-of-type),
-    .#{$common-prefix}button-toggle:not(:last-of-type) {
+    .z-button-switch:not(:last-of-type),
+    .z-button-toggle:not(:last-of-type) {
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
     }
