--- a/src/main/resources/public/scss/template/_color-picker.scss
+++ b/src/main/resources/public/scss/template/_color-picker.scss
@@ -6,17 +6,17 @@
  * @version 1.0
  */
 
-.#{$common-prefix}color-picker-wrapper {
+.z-color-picker-wrapper {
   font-family: $color-picker-font-family;
   font-size: $color-picker-font-size;
   font-weight: $color-picker-font-weight;
   color: $color-picker-font-color;
 
-  .#{$common-prefix}color-input {
+  .z-color-input {
     display: none;
   }
   // color picker
-  .#{$common-prefix}color-picker {
+  .z-color-picker {
     width: $color-picker-width;
     padding: 0.3125rem; // 5px
     @include border($color-picker-border-width, solid, $color-picker-border-color, all); // 1px
@@ -25,14 +25,14 @@
     cursor: pointer;
     outline: none;
 
-    .#{$common-prefix}color-box {
+    .z-color-box {
       display: inline-block;
       width: 4.75rem; // 76px
       height: 1.5rem; // 24px
       @include borderRadius($color-palette-inset-border-radius);
       @include border($color-palette-line-border-width, solid, transparent, all); // 4px
     }
-    .#{$common-prefix}icon {
+    .z-icon {
       &.i-color-palette {
         background: $color-picker-icon-color;
       }
@@ -53,7 +53,7 @@
     }
   }
   // 모달
-  .#{$common-prefix}color-picker-modal {
+  .z-color-picker-modal {
     display: none;
     @include fixed();
     min-width: 23.5rem; // 376px
@@ -68,11 +68,11 @@
       z-index: $z-index-modal;
     }
     // color palette
-    .#{$common-prefix}palette-container {
+    .z-palette-container {
       min-height: 12.5rem; // 200px
       padding:  0.75rem; // 12px
 
-      .#{$common-prefix}palette-row {
+      .z-palette-row {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -81,7 +81,7 @@
           margin-bottom: 0.5rem; // 8px
         }
         // color palette item
-        .#{$common-prefix}palette-item {
+        .z-palette-item {
           display: flex;
           flex-direction: row;
           justify-content: center;
@@ -104,7 +104,7 @@
             @include boxShadow(0, 0, 0, $color-picker-border-width, $color-picker-border-color, true);
           }
 
-          .#{$common-prefix}palette-item-inner {
+          .z-palette-item-inner {
             width: 1.25rem; // 20px
             height: 1.25rem; // 20px
             @include borderRadius($color-palette-inset-border-radius);
@@ -118,14 +118,14 @@
       }
     }
     // 사용자 색상
-    .#{$common-prefix}custom-color-palette-container {
+    .z-custom-color-palette-container {
       @include relative();
       min-height: 4.875rem; // 78px
       padding:  0.75rem; // 12px
       @include border($color-picker-border-width, solid, $color-picker-border-color, top); // 1px
 
       // 편집 버튼
-      .#{$common-prefix}custom-color-edit {
+      .z-custom-color-edit {
         @include absolute($top: 0.125rem, $right: 0.75rem); // 2px 12px
         visibility: hidden;
         &.on {
@@ -134,7 +134,7 @@
       }
 
       // 사용자 색상 목록 영역
-      .#{$common-prefix}custom-color-list {
+      .z-custom-color-list {
         display: flex;
         flex-direction: row;
         margin: 0.75rem 0 0.5rem 0; // 12px 0 8px 0
@@ -145,7 +145,7 @@
 
 
         // custom color palette item
-        .#{$common-prefix}custom-color-palette-item {
+        .z-custom-color-palette-item {
           @include relative();
           display: flex;
           flex-direction: row;
@@ -157,7 +157,7 @@
 
           cursor: pointer;
 
-          .#{$common-prefix}custom-color-palette-item-inner {
+          .z-custom-color-palette-item-inner {
             width: 1.25rem; // 20px
             height: 1.25rem; // 20px
             @include borderRadius($color-palette-inset-border-radius);
@@ -165,7 +165,7 @@
           }
 
           // X 버튼
-          .#{$common-prefix}custom-color-palette-item-clear {
+          .z-custom-color-palette-item-clear {
             width: 1rem; // 16px
             height: 1rem; // 16px
             line-height: 0.3125rem; // 5px
@@ -175,7 +175,7 @@
             padding: 0;
             visibility: hidden;
 
-            .#{$common-prefix}icon {
+            .z-icon {
               &.i-clear {
                 width: 0.5rem; // 8px
                 height: 0.5rem; // 8px
@@ -191,7 +191,7 @@
         }
 
         // [+] 버튼
-        .#{$common-prefix}custom-color-plus {
+        .z-custom-color-plus {
           display: none;
           width: $color-palette-item-width;
           height: $color-palette-item-height;
@@ -203,7 +203,7 @@
           }
           padding: 0 0.0625rem; // 0px 1px
 
-          .#{$common-prefix}icon {
+          .z-icon {
             &.i-plus {
               width: 0.625rem; // 10px
               height: 0.625rem; // 10px
@@ -217,7 +217,7 @@
             @if map-get($custom-color-plus, 'focus', 'shadow') != null {
               box-shadow: map-get($custom-color-plus, 'focus', 'shadow');
             }
-            .#{$common-prefix}icon {
+            .z-icon {
               &.i-plus {
                 background: map-get($custom-color-plus, 'focus', 'font');
               }
@@ -230,7 +230,7 @@
             @if map-get($custom-color-plus, 'hover', 'shadow') != null {
               box-shadow: map-get($custom-color-plus, 'hover', 'shadow');
             }
-            .#{$common-prefix}icon {
+            .z-icon {
               &.i-plus {
                 background: map-get($custom-color-plus, 'hover', 'font');
               }
@@ -244,7 +244,7 @@
             @if map-get($custom-color-plus, 'active', 'shadow') != null {
               box-shadow: map-get($custom-color-plus, 'active', 'shadow');
             }
-            .#{$common-prefix}icon {
+            .z-icon {
               &.i-plus {
                 background: map-get($custom-color-plus, 'active', 'font');
               }
@@ -258,9 +258,9 @@
 
         // 편집 가능시 사용자 색상 삭제 버튼 show
         &.editable {
-          .#{$common-prefix}custom-color-palette-item {
+          .z-custom-color-palette-item {
             // X 버튼
-            .#{$common-prefix}custom-color-palette-item-clear {
+            .z-custom-color-palette-item-clear {
               visibility: visible;
             }
           }
@@ -268,14 +268,14 @@
       }
 
       // 물방울, hex, rgb, 추가 버튼 영역
-      .#{$common-prefix}custom-color-control-container {
+      .z-custom-color-control-container {
         display: none;
         // control open
         &.active {
           display: block;
         }
 
-        .#{$common-prefix}custom-color-control {
+        .z-custom-color-control {
           display: grid;
           grid-template-columns:  1.75rem 5rem 3rem 3rem 3rem 3.75rem; // 28px 80px 48px 48px 48px 60px
           grid-template-rows: 2.25rem 2.25rem; // 36px 36px
@@ -283,7 +283,7 @@
           font-weight: $font-weight-medium;
 
           // 물방울 아이콘
-          .#{$common-prefix}icon {
+          .z-icon {
             &.i-water-drop {
               .water-drop-outer { fill-opacity: 1; }
               .water-drop-inner { fill-opacity: 0; }
@@ -297,17 +297,17 @@
             }
           }
 
-          .#{$common-prefix}input {
+          .z-input {
             padding: 0 0.5rem; // 0 8px
           }
 
           // 문구
-          .#{$common-prefix}color-text {
+          .z-color-text {
             text-align: center;
           }
         }
 
-       .#{$common-prefix}button-list {
+       .z-button-list {
           width: 100%;
           text-align: right;
         }
