--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -837,6 +837,7 @@ select {
   font-family: $element-font-family;
   font-size: $element-font-size;
   font-weight: $element-font-weight;
+  line-height: 1.6;
   color: $element-font-color;
   outline: none;
 
